meta2/y.output
Terminals unused in grammar

    RESERVED


Grammar

    0 $accept: Program $end

    1 Program: FunctionsAndDeclarations

    2 FunctionsAndDeclarations: FunctionsAndDeclarationsMandatory FunctionsAndDeclarationsZeroOrMore

    3 FunctionsAndDeclarationsMandatory: FunctionDefinition
    4                                  | FunctionDeclaration
    5                                  | Declaration

    6 FunctionsAndDeclarationsZeroOrMore: FunctionsAndDeclarationsMandatory FunctionsAndDeclarationsZeroOrMore
    7                                   | %empty

    8 FunctionDefinition: TypeSpec FunctionDeclarator FunctionBody

    9 FunctionBody: LBRACE DeclarationsAndStatements RBRACE
   10             | LBRACE RBRACE

   11 DeclarationsAndStatements: DeclarationsAndStatements Statement
   12                          | DeclarationsAndStatements Declaration
   13                          | Statement
   14                          | Declaration

   15 FunctionDeclaration: TypeSpec FunctionDeclarator SEMI

   16 FunctionDeclarator: ID LPAR ParameterList RPAR

   17 ParameterList: ParameterDeclaration
   18              | ParameterList COMMA ParameterDeclaration

   19 ParameterDeclaration: TypeSpec ID
   20                     | TypeSpec

   21 Declaration: TypeSpec DeclaratorList SEMI
   22            | error SEMI

   23 DeclaratorList: Declarator DeclaratorZeroOrMore

   24 DeclaratorZeroOrMore: COMMA DeclaratorList
   25                     | %empty

   26 TypeSpec: CHAR
   27         | INT
   28         | VOID
   29         | SHORT
   30         | DOUBLE

   31 Declarator: ID ASSIGN Expr
   32           | ID

   33 Statement: SEMI
   34          | Expr SEMI
   35          | LBRACE RBRACE
   36          | LBRACE StatementZeroOrMore RBRACE
   37          | LBRACE error RBRACE
   38          | IF LPAR Expr RPAR StatementOrError ELSE StatementOrError
   39          | IF LPAR Expr RPAR StatementOrError
   40          | WHILE LPAR Expr RPAR StatementOrError
   41          | RETURN Expr SEMI
   42          | RETURN SEMI

   43 StatementZeroOrMore: StatementZeroOrMore StatementOrError
   44                    | StatementOrError

   45 StatementOrError: Statement
   46                 | error SEMI

   47 Expr: ExprA
   48     | Expr COMMA ExprA

   49 ExprA: ExprB
   50      | ExprB ASSIGN ExprA

   51 ExprB: ExprC
   52      | ExprB OR ExprC

   53 ExprC: ExprD
   54      | ExprC AND ExprD

   55 ExprD: ExprE
   56      | ExprD BITWISEOR ExprE

   57 ExprE: ExprF
   58      | ExprE BITWISEXOR ExprF

   59 ExprF: ExprG
   60      | ExprF BITWISEAND ExprG

   61 ExprG: ExprH
   62      | ExprG EQ ExprH
   63      | ExprG NE ExprH

   64 ExprH: ExprI
   65      | ExprH LT ExprI
   66      | ExprH GT ExprI
   67      | ExprH LE ExprI
   68      | ExprH GE ExprI

   69 ExprI: ExprJ
   70      | ExprI PLUS ExprJ
   71      | ExprI MINUS ExprJ

   72 ExprJ: ExprK
   73      | ExprJ MUL ExprK
   74      | ExprJ DIV ExprK
   75      | ExprJ MOD ExprK

   76 ExprK: ExprM
   77      | PLUS ExprK
   78      | MINUS ExprK
   79      | NOT ExprK

   80 ExprL: ExprA
   81      | ExprL COMMA ExprA

   82 ExprM: ExprN
   83      | ID LPAR RPAR
   84      | ID LPAR ExprL RPAR
   85      | ID LPAR error RPAR

   86 ExprN: ID
   87      | INTLIT
   88      | CHRLIT
   89      | REALLIT
   90      | LPAR Expr RPAR
   91      | LPAR error RPAR


Terminals, with rules where they appear

    $end (0) 0
    error (256) 22 37 46 85 91
    CHAR (258) 26
    ELSE (259) 38
    WHILE (260) 40
    IF (261) 38 39
    INT (262) 27
    SHORT (263) 29
    DOUBLE (264) 30
    RETURN (265) 41 42
    VOID (266) 28
    BITWISEAND (267) 60
    BITWISEOR (268) 56
    BITWISEXOR (269) 58
    AND (270) 54
    ASSIGN (271) 31 50
    MUL (272) 73
    COMMA (273) 18 24 48 81
    DIV (274) 74
    EQ (275) 62
    GE (276) 68
    GT (277) 66
    LBRACE (278) 9 10 35 36 37
    LE (279) 67
    LPAR (280) 16 38 39 40 83 84 85 90 91
    LT (281) 65
    MINUS (282) 71 78
    MOD (283) 75
    NE (284) 63
    NOT (285) 79
    OR (286) 52
    PLUS (287) 70 77
    RBRACE (288) 9 10 35 36 37
    RPAR (289) 16 38 39 40 83 84 85 90 91
    SEMI (290) 15 21 22 33 34 41 42 46
    RESERVED (291)
    REALLIT <value> (292) 89
    INTLIT <value> (293) 87
    CHRLIT <value> (294) 88
    ID <value> (295) 16 19 31 32 83 84 85 86
    NOELSE (296)


Nonterminals, with rules where they appear

    $accept (42)
        on left: 0
    Program <node> (43)
        on left: 1
        on right: 0
    FunctionsAndDeclarations <node> (44)
        on left: 2
        on right: 1
    FunctionsAndDeclarationsMandatory <node> (45)
        on left: 3 4 5
        on right: 2 6
    FunctionsAndDeclarationsZeroOrMore <node> (46)
        on left: 6 7
        on right: 2 6
    FunctionDefinition <node> (47)
        on left: 8
        on right: 3
    FunctionBody <node> (48)
        on left: 9 10
        on right: 8
    DeclarationsAndStatements <node> (49)
        on left: 11 12 13 14
        on right: 9 11 12
    FunctionDeclaration <node> (50)
        on left: 15
        on right: 4
    FunctionDeclarator <node> (51)
        on left: 16
        on right: 8 15
    ParameterList <node> (52)
        on left: 17 18
        on right: 16 18
    ParameterDeclaration <node> (53)
        on left: 19 20
        on right: 17 18
    Declaration <node> (54)
        on left: 21 22
        on right: 5 12 14
    DeclaratorList <node> (55)
        on left: 23
        on right: 21 24
    DeclaratorZeroOrMore <node> (56)
        on left: 24 25
        on right: 23
    TypeSpec <node> (57)
        on left: 26 27 28 29 30
        on right: 8 15 19 20 21
    Declarator <node> (58)
        on left: 31 32
        on right: 23
    Statement <node> (59)
        on left: 33 34 35 36 37 38 39 40 41 42
        on right: 11 13 45
    StatementZeroOrMore <node> (60)
        on left: 43 44
        on right: 36 43
    StatementOrError <node> (61)
        on left: 45 46
        on right: 38 39 40 43 44
    Expr <node> (62)
        on left: 47 48
        on right: 31 34 38 39 40 41 48 90
    ExprA <node> (63)
        on left: 49 50
        on right: 47 48 50 80 81
    ExprB <node> (64)
        on left: 51 52
        on right: 49 50 52
    ExprC <node> (65)
        on left: 53 54
        on right: 51 52 54
    ExprD <node> (66)
        on left: 55 56
        on right: 53 54 56
    ExprE <node> (67)
        on left: 57 58
        on right: 55 56 58
    ExprF <node> (68)
        on left: 59 60
        on right: 57 58 60
    ExprG <node> (69)
        on left: 61 62 63
        on right: 59 60 62 63
    ExprH <node> (70)
        on left: 64 65 66 67 68
        on right: 61 62 63 65 66 67 68
    ExprI <node> (71)
        on left: 69 70 71
        on right: 64 65 66 67 68 70 71
    ExprJ <node> (72)
        on left: 72 73 74 75
        on right: 69 70 71 73 74 75
    ExprK <node> (73)
        on left: 76 77 78 79
        on right: 72 73 74 75 77 78 79
    ExprL <node> (74)
        on left: 80 81
        on right: 81 84
    ExprM <node> (75)
        on left: 82 83 84 85
        on right: 76
    ExprN <node> (76)
        on left: 86 87 88 89 90 91
        on right: 82


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    Program                            go to state 7
    FunctionsAndDeclarations           go to state 8
    FunctionsAndDeclarationsMandatory  go to state 9
    FunctionDefinition                 go to state 10
    FunctionDeclaration                go to state 11
    Declaration                        go to state 12
    TypeSpec                           go to state 13


State 1

   22 Declaration: error . SEMI

    SEMI  shift, and go to state 14


State 2

   26 TypeSpec: CHAR .

    $default  reduce using rule 26 (TypeSpec)


State 3

   27 TypeSpec: INT .

    $default  reduce using rule 27 (TypeSpec)


State 4

   29 TypeSpec: SHORT .

    $default  reduce using rule 29 (TypeSpec)


State 5

   30 TypeSpec: DOUBLE .

    $default  reduce using rule 30 (TypeSpec)


State 6

   28 TypeSpec: VOID .

    $default  reduce using rule 28 (TypeSpec)


State 7

    0 $accept: Program . $end

    $end  shift, and go to state 15


State 8

    1 Program: FunctionsAndDeclarations .

    $default  reduce using rule 1 (Program)


State 9

    2 FunctionsAndDeclarations: FunctionsAndDeclarationsMandatory . FunctionsAndDeclarationsZeroOrMore

    error   shift, and go to state 1
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    $end  reduce using rule 7 (FunctionsAndDeclarationsZeroOrMore)

    FunctionsAndDeclarationsMandatory   go to state 16
    FunctionsAndDeclarationsZeroOrMore  go to state 17
    FunctionDefinition                  go to state 10
    FunctionDeclaration                 go to state 11
    Declaration                         go to state 12
    TypeSpec                            go to state 13


State 10

    3 FunctionsAndDeclarationsMandatory: FunctionDefinition .

    $default  reduce using rule 3 (FunctionsAndDeclarationsMandatory)


State 11

    4 FunctionsAndDeclarationsMandatory: FunctionDeclaration .

    $default  reduce using rule 4 (FunctionsAndDeclarationsMandatory)


State 12

    5 FunctionsAndDeclarationsMandatory: Declaration .

    $default  reduce using rule 5 (FunctionsAndDeclarationsMandatory)


State 13

    8 FunctionDefinition: TypeSpec . FunctionDeclarator FunctionBody
   15 FunctionDeclaration: TypeSpec . FunctionDeclarator SEMI
   21 Declaration: TypeSpec . DeclaratorList SEMI

    ID  shift, and go to state 18

    FunctionDeclarator  go to state 19
    DeclaratorList      go to state 20
    Declarator          go to state 21


State 14

   22 Declaration: error SEMI .

    $default  reduce using rule 22 (Declaration)


State 15

    0 $accept: Program $end .

    $default  accept


State 16

    6 FunctionsAndDeclarationsZeroOrMore: FunctionsAndDeclarationsMandatory . FunctionsAndDeclarationsZeroOrMore

    error   shift, and go to state 1
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    $end  reduce using rule 7 (FunctionsAndDeclarationsZeroOrMore)

    FunctionsAndDeclarationsMandatory   go to state 16
    FunctionsAndDeclarationsZeroOrMore  go to state 22
    FunctionDefinition                  go to state 10
    FunctionDeclaration                 go to state 11
    Declaration                         go to state 12
    TypeSpec                            go to state 13


State 17

    2 FunctionsAndDeclarations: FunctionsAndDeclarationsMandatory FunctionsAndDeclarationsZeroOrMore .

    $default  reduce using rule 2 (FunctionsAndDeclarations)


State 18

   16 FunctionDeclarator: ID . LPAR ParameterList RPAR
   31 Declarator: ID . ASSIGN Expr
   32           | ID .

    ASSIGN  shift, and go to state 23
    LPAR    shift, and go to state 24

    $default  reduce using rule 32 (Declarator)


State 19

    8 FunctionDefinition: TypeSpec FunctionDeclarator . FunctionBody
   15 FunctionDeclaration: TypeSpec FunctionDeclarator . SEMI

    LBRACE  shift, and go to state 25
    SEMI    shift, and go to state 26

    FunctionBody  go to state 27


State 20

   21 Declaration: TypeSpec DeclaratorList . SEMI

    SEMI  shift, and go to state 28


State 21

   23 DeclaratorList: Declarator . DeclaratorZeroOrMore

    COMMA  shift, and go to state 29

    $default  reduce using rule 25 (DeclaratorZeroOrMore)

    DeclaratorZeroOrMore  go to state 30


State 22

    6 FunctionsAndDeclarationsZeroOrMore: FunctionsAndDeclarationsMandatory FunctionsAndDeclarationsZeroOrMore .

    $default  reduce using rule 6 (FunctionsAndDeclarationsZeroOrMore)


State 23

   31 Declarator: ID ASSIGN . Expr

    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34
    REALLIT  shift, and go to state 35
    INTLIT   shift, and go to state 36
    CHRLIT   shift, and go to state 37
    ID       shift, and go to state 38

    Expr   go to state 39
    ExprA  go to state 40
    ExprB  go to state 41
    ExprC  go to state 42
    ExprD  go to state 43
    ExprE  go to state 44
    ExprF  go to state 45
    ExprG  go to state 46
    ExprH  go to state 47
    ExprI  go to state 48
    ExprJ  go to state 49
    ExprK  go to state 50
    ExprM  go to state 51
    ExprN  go to state 52


State 24

   16 FunctionDeclarator: ID LPAR . ParameterList RPAR

    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    SHORT   shift, and go to state 4
    DOUBLE  shift, and go to state 5
    VOID    shift, and go to state 6

    ParameterList         go to state 53
    ParameterDeclaration  go to state 54
    TypeSpec              go to state 55


State 25

    9 FunctionBody: LBRACE . DeclarationsAndStatements RBRACE
   10             | LBRACE . RBRACE

    error    shift, and go to state 1
    CHAR     shift, and go to state 2
    WHILE    shift, and go to state 56
    IF       shift, and go to state 57
    INT      shift, and go to state 3
    SHORT    shift, and go to state 4
    DOUBLE   shift, and go to state 5
    RETURN   shift, and go to state 58
    VOID     shift, and go to state 6
    LBRACE   shift, and go to state 59
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34
    RBRACE   shift, and go to state 60
    SEMI     shift, and go to state 61
    REALLIT  shift, and go to state 35
    INTLIT   shift, and go to state 36
    CHRLIT   shift, and go to state 37
    ID       shift, and go to state 38

    DeclarationsAndStatements  go to state 62
    Declaration                go to state 63
    TypeSpec                   go to state 64
    Statement                  go to state 65
    Expr                       go to state 66
    ExprA                      go to state 40
    ExprB                      go to state 41
    ExprC                      go to state 42
    ExprD                      go to state 43
    ExprE                      go to state 44
    ExprF                      go to state 45
    ExprG                      go to state 46
    ExprH                      go to state 47
    ExprI                      go to state 48
    ExprJ                      go to state 49
    ExprK                      go to state 50
    ExprM                      go to state 51
    ExprN                      go to state 52


State 26

   15 FunctionDeclaration: TypeSpec FunctionDeclarator SEMI .

    $default  reduce using rule 15 (FunctionDeclaration)


State 27

    8 FunctionDefinition: TypeSpec FunctionDeclarator FunctionBody .

    $default  reduce using rule 8 (FunctionDefinition)


State 28

   21 Declaration: TypeSpec DeclaratorList SEMI .

    $default  reduce using rule 21 (Declaration)


State 29

   24 DeclaratorZeroOrMore: COMMA . DeclaratorList

    ID  shift, and go to state 67

    DeclaratorList  go to state 68
    Declarator      go to state 21


State 30

   23 DeclaratorList: Declarator DeclaratorZeroOrMore .

    $default  reduce using rule 23 (DeclaratorList)


State 31

   90 ExprN: LPAR . Expr RPAR
   91      | LPAR . error RPAR

    error    shift, and go to state 69
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34
    REALLIT  shift, and go to state 35
    INTLIT   shift, and go to state 36
    CHRLIT   shift, and go to state 37
    ID       shift, and go to state 38

    Expr   go to state 70
    ExprA  go to state 40
    ExprB  go to state 41
    ExprC  go to state 42
    ExprD  go to state 43
    ExprE  go to state 44
    ExprF  go to state 45
    ExprG  go to state 46
    ExprH  go to state 47
    ExprI  go to state 48
    ExprJ  go to state 49
    ExprK  go to state 50
    ExprM  go to state 51
    ExprN  go to state 52


State 32

   78 ExprK: MINUS . ExprK

    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34
    REALLIT  shift, and go to state 35
    INTLIT   shift, and go to state 36
    CHRLIT   shift, and go to state 37
    ID       shift, and go to state 38

    ExprK  go to state 71
    ExprM  go to state 51
    ExprN  go to state 52


State 33

   79 ExprK: NOT . ExprK

    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34
    REALLIT  shift, and go to state 35
    INTLIT   shift, and go to state 36
    CHRLIT   shift, and go to state 37
    ID       shift, and go to state 38

    ExprK  go to state 72
    ExprM  go to state 51
    ExprN  go to state 52


State 34

   77 ExprK: PLUS . ExprK

    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34
    REALLIT  shift, and go to state 35
    INTLIT   shift, and go to state 36
    CHRLIT   shift, and go to state 37
    ID       shift, and go to state 38

    ExprK  go to state 73
    ExprM  go to state 51
    ExprN  go to state 52


State 35

   89 ExprN: REALLIT .

    $default  reduce using rule 89 (ExprN)


State 36

   87 ExprN: INTLIT .

    $default  reduce using rule 87 (ExprN)


State 37

   88 ExprN: CHRLIT .

    $default  reduce using rule 88 (ExprN)


State 38

   83 ExprM: ID . LPAR RPAR
   84      | ID . LPAR ExprL RPAR
   85      | ID . LPAR error RPAR
   86 ExprN: ID .

    LPAR  shift, and go to state 74

    $default  reduce using rule 86 (ExprN)


State 39

   31 Declarator: ID ASSIGN Expr .
   48 Expr: Expr . COMMA ExprA

    $default  reduce using rule 31 (Declarator)


State 40

   47 Expr: ExprA .

    $default  reduce using rule 47 (Expr)


State 41

   49 ExprA: ExprB .
   50      | ExprB . ASSIGN ExprA
   52 ExprB: ExprB . OR ExprC

    ASSIGN  shift, and go to state 76
    OR      shift, and go to state 77

    $default  reduce using rule 49 (ExprA)


State 42

   51 ExprB: ExprC .
   54 ExprC: ExprC . AND ExprD

    AND  shift, and go to state 78

    $default  reduce using rule 51 (ExprB)


State 43

   53 ExprC: ExprD .
   56 ExprD: ExprD . BITWISEOR ExprE

    BITWISEOR  shift, and go to state 79

    $default  reduce using rule 53 (ExprC)


State 44

   55 ExprD: ExprE .
   58 ExprE: ExprE . BITWISEXOR ExprF

    BITWISEXOR  shift, and go to state 80

    $default  reduce using rule 55 (ExprD)


State 45

   57 ExprE: ExprF .
   60 ExprF: ExprF . BITWISEAND ExprG

    BITWISEAND  shift, and go to state 81

    $default  reduce using rule 57 (ExprE)


State 46

   59 ExprF: ExprG .
   62 ExprG: ExprG . EQ ExprH
   63      | ExprG . NE ExprH

    EQ  shift, and go to state 82
    NE  shift, and go to state 83

    $default  reduce using rule 59 (ExprF)


State 47

   61 ExprG: ExprH .
   65 ExprH: ExprH . LT ExprI
   66      | ExprH . GT ExprI
   67      | ExprH . LE ExprI
   68      | ExprH . GE ExprI

    GE  shift, and go to state 84
    GT  shift, and go to state 85
    LE  shift, and go to state 86
    LT  shift, and go to state 87

    $default  reduce using rule 61 (ExprG)


State 48

   64 ExprH: ExprI .
   70 ExprI: ExprI . PLUS ExprJ
   71      | ExprI . MINUS ExprJ

    MINUS  shift, and go to state 88
    PLUS   shift, and go to state 89

    $default  reduce using rule 64 (ExprH)


State 49

   69 ExprI: ExprJ .
   73 ExprJ: ExprJ . MUL ExprK
   74      | ExprJ . DIV ExprK
   75      | ExprJ . MOD ExprK

    MUL  shift, and go to state 90
    DIV  shift, and go to state 91
    MOD  shift, and go to state 92

    $default  reduce using rule 69 (ExprI)


State 50

   72 ExprJ: ExprK .

    $default  reduce using rule 72 (ExprJ)


State 51

   76 ExprK: ExprM .

    $default  reduce using rule 76 (ExprK)


State 52

   82 ExprM: ExprN .

    $default  reduce using rule 82 (ExprM)


State 53

   16 FunctionDeclarator: ID LPAR ParameterList . RPAR
   18 ParameterList: ParameterList . COMMA ParameterDeclaration

    COMMA  shift, and go to state 93
    RPAR   shift, and go to state 94


State 54

   17 ParameterList: ParameterDeclaration .

    $default  reduce using rule 17 (ParameterList)


State 55

   19 ParameterDeclaration: TypeSpec . ID
   20                     | TypeSpec .

    ID  shift, and go to state 95

    $default  reduce using rule 20 (ParameterDeclaration)


State 56

   40 Statement: WHILE . LPAR Expr RPAR StatementOrError

    LPAR  shift, and go to state 96


State 57

   38 Statement: IF . LPAR Expr RPAR StatementOrError ELSE StatementOrError
   39          | IF . LPAR Expr RPAR StatementOrError

    LPAR  shift, and go to state 97


State 58

   41 Statement: RETURN . Expr SEMI
   42          | RETURN . SEMI

    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34
    SEMI     shift, and go to state 98
    REALLIT  shift, and go to state 35
    INTLIT   shift, and go to state 36
    CHRLIT   shift, and go to state 37
    ID       shift, and go to state 38

    Expr   go to state 99
    ExprA  go to state 40
    ExprB  go to state 41
    ExprC  go to state 42
    ExprD  go to state 43
    ExprE  go to state 44
    ExprF  go to state 45
    ExprG  go to state 46
    ExprH  go to state 47
    ExprI  go to state 48
    ExprJ  go to state 49
    ExprK  go to state 50
    ExprM  go to state 51
    ExprN  go to state 52


State 59

   35 Statement: LBRACE . RBRACE
   36          | LBRACE . StatementZeroOrMore RBRACE
   37          | LBRACE . error RBRACE

    error    shift, and go to state 100
    WHILE    shift, and go to state 56
    IF       shift, and go to state 57
    RETURN   shift, and go to state 58
    LBRACE   shift, and go to state 59
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34
    RBRACE   shift, and go to state 101
    SEMI     shift, and go to state 61
    REALLIT  shift, and go to state 35
    INTLIT   shift, and go to state 36
    CHRLIT   shift, and go to state 37
    ID       shift, and go to state 38

    Statement            go to state 102
    StatementZeroOrMore  go to state 103
    StatementOrError     go to state 104
    Expr                 go to state 66
    ExprA                go to state 40
    ExprB                go to state 41
    ExprC                go to state 42
    ExprD                go to state 43
    ExprE                go to state 44
    ExprF                go to state 45
    ExprG                go to state 46
    ExprH                go to state 47
    ExprI                go to state 48
    ExprJ                go to state 49
    ExprK                go to state 50
    ExprM                go to state 51
    ExprN                go to state 52


State 60

   10 FunctionBody: LBRACE RBRACE .

    $default  reduce using rule 10 (FunctionBody)


State 61

   33 Statement: SEMI .

    $default  reduce using rule 33 (Statement)


State 62

    9 FunctionBody: LBRACE DeclarationsAndStatements . RBRACE
   11 DeclarationsAndStatements: DeclarationsAndStatements . Statement
   12                          | DeclarationsAndStatements . Declaration

    error    shift, and go to state 1
    CHAR     shift, and go to state 2
    WHILE    shift, and go to state 56
    IF       shift, and go to state 57
    INT      shift, and go to state 3
    SHORT    shift, and go to state 4
    DOUBLE   shift, and go to state 5
    RETURN   shift, and go to state 58
    VOID     shift, and go to state 6
    LBRACE   shift, and go to state 59
    LPAR     shift, and go to state 31
    MINUS    shift, and go to state 32
    NOT      shift, and go to state 33
    PLUS     shift, and go to state 34
    RBRACE   shift, and go to state 105
    SEMI     shift, and go to state 61
    REALLIT  shift, and go to state 35
    INTLIT   shift, and go to state 36
    CHRLIT   shift, and go to state 37
    ID       shift, and go to state 38

    Declaration  go to state 106
    TypeSpec     go to state 64
    Statement    go to state 107
    Expr         go to state 66
    ExprA        go to state 40
    ExprB        go to state 41
    ExprC        go to state 42
    ExprD        go to state 43
    ExprE        go to state 44
    ExprF        go to state 45
    ExprG        go to state 46
    ExprH        go to state 47
    ExprI        go to state 48
    ExprJ        go to state 49
    ExprK        go to state 50
    ExprM        go to state 51
    ExprN        go to state 52


State 63

   14 DeclarationsAndStatements: Declaration .

    $default  reduce using rule 14 (DeclarationsAndStatements)


State 64

   21 Declaration: TypeSpec . DeclaratorList SEMI

    ID  shift, and go to state 67

    DeclaratorList  go to state 20
    Declarator      go to state 21


State 65

   13 DeclarationsAndStatements: Statement .

    $default  reduce using rule 13 (DeclarationsAndStatements)


State 66

   34 Statement: Expr . SEMI
   48 Expr: Expr . COMMA ExprA

    COMMA  shift, and go to state 75
    SEMI   shift, and go to state 108


State 67

   31 Declarator: ID . ASSIGN Expr
   32           | ID .

    ASSIGN  shift, and go to state 23

    $default  reduce using rule 32 (Declarator)


State 68

   24 DeclaratorZeroOrMore: COMMA DeclaratorList .

    $default  reduce using rule 24 (DeclaratorZeroOrMore)


State 69

   91 ExprN: LPAR error . RPAR

    RPAR  shift, and go to state 109


State 70
